<resources>
    <string name="app_name">Laboratorio 7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Laboratorio 7</string>
    <string name="email_req">Ingresa tu correo</string>
    <string name="new_user">¿Nuevo usuario? ¡Crea tu cuenta aquí!</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="new_account_title">Nueva cuenta</string>
    <string name="btn_new_account">Crear cuenta</string>
    <string name="my_profile_title">Mi perfil</string>
    <string name="btn_update">Actualizar</string>
    <string name="test_my_profile_email">jcdurini@uvg.edu.gt</string>
    <string name="test_home_title">¡Buenos días!</string>
    <string name="home_message">Hola jcdurini@uvg.edu.gt, ¡necesitamos que actualices tu perfil!</string>
    <string name="btn_home">Actualizar perfil</string>
</resources>