<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/txt_loginFragment_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputLayout_loginFragment_email"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/Grey"
        android:textSize="@dimen/title"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_loginFragment_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_loginFragment_Title"
        app:layout_constraintBottom_toTopOf="@id/txt_loginFragment_newUser"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/large_top_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_req"
            android:textColor="@color/light_grey"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_loginFragment_newUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/min_top_margin"
        android:clickable="true"
        android:text="@string/new_user"
        android:textColor="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@id/btn_loginFragment_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_loginFragment_email" />
    <Button
        android:id="@+id/btn_loginFragment_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_loginFragment_newUser"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/mid_top_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:backgroundTint="@color/Orange"
        />

</androidx.constraintlayout.widget.ConstraintLayout>