<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/txt_homeFragment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_homeFragment_message"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/test_home_title"
        android:textColor="@color/Grey"
        android:textSize="@dimen/title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        />

    <TextView
        android:id="@+id/txt_homeFragment_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/mid_top_margin"
        app:layout_constraintTop_toBottomOf="@id/txt_homeFragment_title"
        app:layout_constraintBottom_toTopOf="@id/btn_homeFragment_updateProfile"
        tools:text="@string/home_message"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:textAlignment="center"
    />

    <Button
        android:id="@+id/btn_homeFragment_updateProfile"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/Orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_homeFragment_message"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/min_top_margin"
        android:text="@string/btn_home"
        android:layout_marginHorizontal="@dimen/btn_home_horizontal_margin"
        android:textAllCaps="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>